# habitat_data_generator

./: .gitignore  Makefile  README.md  generate.py  pyproject.toml
configs/lighting/: light_settings_camera.json  light_settings_dynamic_lights.json  light_settings_replica_cad_1.json  light_settings_replica_cad_2.json  light_settings_replica_cad_4.json  light_settings_replica_cad_5.json  light_settings_replica_cad_6.json
configs/sim_settings/examples/: sim_settings_hm3d.json  sim_settings_replica.json  sim_settings_replica_cad.json
configs/sim_settings/hm3d/: sim_settings_0.json  sim_settings_1.json  sim_settings_10.json  sim_settings_11.json  sim_settings_12.json  sim_settings_13.json  sim_settings_14.json  sim_settings_15.json  sim_settings_16.json  sim_settings_17.json  sim_settings_18.json  sim_settings_19.json  sim_settings_2.json  sim_settings_20.json  sim_settings_21.json  sim_settings_22.json  sim_settings_23.json  sim_settings_3.json  sim_settings_4.json  sim_settings_5.json  sim_settings_6.json  sim_settings_7.json  sim_settings_8.json  sim_settings_9.json
configs/sim_settings/replica_cad/: sim_settings_0.json  sim_settings_1.json  sim_settings_10.json  sim_settings_100.json  sim_settings_101.json  sim_settings_102.json  sim_settings_103.json  sim_settings_104.json  sim_settings_105.json  sim_settings_106.json  (+100 more)
docker/: Dockerfile  docker-compose.yml
hadage/: __init__.py
hadage/core/: lights.py  logger.py  runner.py  settings.py  simulator.py
hadage/tools/: common.py  visual.py
notebooks/: generate_queue.ipynb  generate_queue_debug.ipynb
